Fix the wrap style of the commit list field.
The commit list field for review requests wasn't wrapping, which meant
that commit messages which had an extremely long first line would cause
it to look very ugly. This change fixes that.

Testing Done:
Posted a commit with a very long summary and saw that the display looked
good.

Bugs Fixed: 4891

Reviewed at https://reviews.reviewboard.org/r/11814/

--- a/reviewboard/static/rb/css/pages/review-request.less
+++ b/reviewboard/static/rb/css/pages/review-request.less
@@ -124,6 +124,7 @@
 
   pre {
     margin: 0;
+    white-space: pre-wrap;
   }
 
   td,
